--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "dm",
+  "name": "Hive Adventures",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "yaayitsmango",
+  "author": "GrowTopics",
   "license": "ISC",
+  "engines": {
+    "node": "14.0.0"
+  },
   "dependencies": {
     "discord.js": "^12.3.1"
   }
